# docs/swagger.yaml
@@ -163,7 +163,7 @@ paths:
          description: 成功
          schema:
            $ref: '#/definitions/resp'
- 
+
  /carrier/delete:
    post:
      summary: 删除物流公司
@@ -174,29 +174,6 @@ paths:
        - name: id
          in: formData
          description: 物流公司编号
-         required: true
-         type: integer
-     responses:
-       200:
-         description: 成功
-         schema:
-           $ref: '#/definitions/resp'
-
- /carrier/edit-status:
-   post:
-     summary: 编辑物流公司状态
-     description: 编辑物流公司状态
-     tags:
-       - 物流公司
-     parameters:
-       - name: id
-         in: formData
-         description: 物流公司编号(1,2逗号分隔多个)
-         required: true
-         type: integer
-       - name: status
-         in: query
-         description: 物流公司状态
          required: true
          type: integer
      responses:
